Added default torch device stuff

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "!export CUDA_VISIBLE_DEVICES=1\n",
+    "%env CUDA_VISIBLE_DEVICES=1\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!export CUDA_VISIBLE_DEVICES=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +693,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env CUDA_VISIBLE_DEVICES=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2473,21 @@
       " * (str type, int index)\n",
       "\n",
       "[Warning] Custom device None failed, fallback to default cuda device\n",
-      "Number of points at initialisation :  206613\n",
+      "Number of points at initialisation :  206613\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sankeerth/projects/livegs_shangar/c3dgs_diff_indexing/scene/gaussian_model.py:843: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  scaling = self.scaling_factor_activation(torch.tensor(scales, dtype=torch.float, device=\"cuda\"))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Setting up compressed model...\n"
      ]
     },
@@ -2435,21 +2495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "Calculating sensitivity: 100%|██████████| 255/255 [00:01<00:00, 181.27it/s]\n"
+      "Calculating sensitivity: 100%|██████████| 255/255 [00:00<00:00, 283.01it/s]\n"
      ]
     },
     {
@@ -2465,139 +2511,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "100%|██████████| 100/100 [00:14<00:00,  6.92it/s]\n"
+      "100%|██████████| 100/100 [00:13<00:00,  7.35it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training progress:   0%|          | 40/30000 [03:27<43:05:28,  5.18s/it, Loss=0.2276484]\n",
-      "calculating indices took 0.1038210391998291 seconds \n",
+      "calculating indices took 0.09821367263793945 seconds \n",
       "gaussians keep: 1.56%\n",
       "Output folder: ./output/bonsai\n",
-      "Training progress:   0%|          | 10/30000 [00:02<2:23:51,  3.47it/s, Loss=0.2751664]Iteration: 10, loss: 0.2844318449497223\n",
-      "Training progress:   0%|          | 20/30000 [00:05<2:24:26,  3.46it/s, Loss=0.2719443]Iteration: 20, loss: 0.2704913020133972\n",
-      "Training progress:   0%|          | 30/30000 [00:08<2:24:15,  3.46it/s, Loss=0.2359433]Iteration: 30, loss: 0.2363852858543396\n",
-      "Training progress:   0%|          | 40/30000 [00:11<2:24:11,  3.46it/s, Loss=0.1964569]Iteration: 40, loss: 0.18505454063415527\n",
-      "Training progress:   0%|          | 50/30000 [00:14<2:23:49,  3.47it/s, Loss=0.1795802]Iteration: 50, loss: 0.16601777076721191\n",
-      "Training progress:   0%|          | 60/30000 [00:17<2:23:39,  3.47it/s, Loss=0.1751809]Iteration: 60, loss: 0.13161231577396393\n",
-      "Training progress:   0%|          | 70/30000 [00:20<2:23:26,  3.48it/s, Loss=0.1668177]Iteration: 70, loss: 0.17282366752624512\n",
-      "Training progress:   0%|          | 80/30000 [00:23<2:23:23,  3.48it/s, Loss=0.1801638]Iteration: 80, loss: 0.18673603236675262\n",
-      "Training progress:   0%|          | 90/30000 [00:25<2:23:13,  3.48it/s, Loss=0.1466664]Iteration: 90, loss: 0.14906400442123413\n",
-      "Training progress:   0%|          | 100/30000 [00:28<2:22:51,  3.49it/s, Loss=0.1463952]Iteration: 100, loss: 0.1425752341747284\n",
-      "Training progress:   0%|          | 110/30000 [00:31<2:23:01,  3.48it/s, Loss=0.1364365]Iteration: 110, loss: 0.15546855330467224\n",
-      "Training progress:   0%|          | 120/30000 [00:34<2:23:10,  3.48it/s, Loss=0.1385283]Iteration: 120, loss: 0.14815518260002136\n",
-      "Training progress:   0%|          | 130/30000 [00:37<2:22:46,  3.49it/s, Loss=0.1301787]Iteration: 130, loss: 0.1073240339756012\n",
-      "Training progress:   0%|          | 140/30000 [00:40<2:22:46,  3.49it/s, Loss=0.1154509]Iteration: 140, loss: 0.1131063848733902\n",
-      "Training progress:   0%|          | 150/30000 [00:43<2:22:13,  3.50it/s, Loss=0.1137071]Iteration: 150, loss: 0.12245617806911469\n",
-      "Training progress:   1%|          | 160/30000 [00:45<2:22:18,  3.49it/s, Loss=0.1045241]Iteration: 160, loss: 0.0913914367556572\n"
+      "Training progress:   0%|          | 10/30000 [00:01<1:06:29,  7.52it/s, Loss=0.2690075]Iteration: 10, loss: 0.26357924938201904\n",
+      "Training progress:   0%|          | 20/30000 [00:02<1:04:33,  7.74it/s, Loss=0.2420370]Iteration: 20, loss: 0.267322301864624\n",
+      "Training progress:   0%|          | 30/30000 [00:03<1:03:50,  7.82it/s, Loss=0.2514775]Iteration: 30, loss: 0.24409937858581543\n",
+      "Training progress:   0%|          | 40/30000 [00:05<1:03:20,  7.88it/s, Loss=0.2074345]Iteration: 40, loss: 0.19404131174087524\n",
+      "Training progress:   0%|          | 50/30000 [00:06<1:03:02,  7.92it/s, Loss=0.1916442]Iteration: 50, loss: 0.15808871388435364\n",
+      "Training progress:   0%|          | 60/30000 [00:07<1:02:56,  7.93it/s, Loss=0.1991891]Iteration: 60, loss: 0.21001069247722626\n",
+      "Training progress:   0%|          | 70/30000 [00:08<1:02:52,  7.93it/s, Loss=0.1774197]Iteration: 70, loss: 0.1749039888381958\n",
+      "Training progress:   0%|          | 80/30000 [00:10<1:02:45,  7.95it/s, Loss=0.1471769]Iteration: 80, loss: 0.11171523481607437\n",
+      "Training progress:   0%|          | 90/30000 [00:11<1:02:36,  7.96it/s, Loss=0.1326688]Iteration: 90, loss: 0.1391807645559311\n",
+      "Training progress:   0%|          | 100/30000 [00:12<1:02:25,  7.98it/s, Loss=0.1299842]Iteration: 100, loss: 0.13416190445423126\n",
+      "Training progress:   0%|          | 110/30000 [00:13<1:02:17,  8.00it/s, Loss=0.1135655]Iteration: 110, loss: 0.10674535483121872\n",
+      "Training progress:   0%|          | 120/30000 [00:15<1:02:17,  8.00it/s, Loss=0.1151944]Iteration: 120, loss: 0.12961342930793762\n",
+      "Training progress:   0%|          | 130/30000 [00:16<1:02:45,  7.93it/s, Loss=0.1169297]Iteration: 130, loss: 0.12141180038452148\n",
+      "Training progress:   0%|          | 140/30000 [00:17<1:02:51,  7.92it/s, Loss=0.1008906]Iteration: 140, loss: 0.08558280766010284\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 47\u001b[0m\n\u001b[1;32m     44\u001b[0m comp_params\u001b[38;5;241m.\u001b[39mfinetune_iterations \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30_000\u001b[39m\n\u001b[1;32m     45\u001b[0m scene\u001b[38;5;241m.\u001b[39mloaded_iter \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 47\u001b[0m \u001b[43mfinetune\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43mscene\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\u001b[43moptim_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcomp_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpipeline_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtesting_iterations\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     54\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdebug_from\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\n\u001b[1;32m     55\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     57\u001b[0m iteration \u001b[38;5;241m=\u001b[39m comp_params\u001b[38;5;241m.\u001b[39mfinetune_iterations\n\u001b[1;32m     58\u001b[0m out_file \u001b[38;5;241m=\u001b[39m path\u001b[38;5;241m.\u001b[39mjoin(\n\u001b[1;32m     59\u001b[0m     comp_params\u001b[38;5;241m.\u001b[39moutput_vq,\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpoint_cloud/iteration_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00miteration\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/point_cloud.npz\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     61\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[5], line 93\u001b[0m, in \u001b[0;36mfinetune\u001b[0;34m(scene, dataset, opt, comp, pipe, testing_iterations, debug_from)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tc \u001b[38;5;129;01min\u001b[39;00m scene\u001b[38;5;241m.\u001b[39mgetTestCameras():\n\u001b[1;32m     92\u001b[0m     t_img \u001b[38;5;241m=\u001b[39m render(tc, scene\u001b[38;5;241m.\u001b[39mgaussians, pipe, background, use_mlp\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrender\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m---> 93\u001b[0m     test_psnrs\u001b[38;5;241m.\u001b[39mappend(\u001b[43mpsnr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moriginal_image\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     94\u001b[0m     test_ssims\u001b[38;5;241m.\u001b[39mappend(ssim(t_img, tc\u001b[38;5;241m.\u001b[39moriginal_image)\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39mitem())\n\u001b[1;32m     95\u001b[0m     ll1_test \u001b[38;5;241m=\u001b[39m l1_loss(t_img, tc\u001b[38;5;241m.\u001b[39moriginal_image)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# Code that produces stderr output\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '1'\n",
     "parser = ArgumentParser(description=\"Compression script parameters\")\n",
     "model = ModelParams(parser, sentinel=True)\n",
     "model.data_device = \"cuda\"\n",
